Time: 31 ms (14.42%), Space: 44.6 MB (37.17%) - LeetHub