@@ -3,7 +3,8 @@ class Solution {
         
         int maxVowels = 0;
 
-        Set<Character> vowels = new HashSet<>(Arrays.asList('a','e','i','o','u'));
+        //Set<Character> vowels = new HashSet<>(Arrays.asList('a','e','i','o','u'));
+        var vowels = Set.of('a','e','i','o','u');
         
         for(int i = 0; i < k; i++ ) {
             if(vowels.contains(s.charAt(i))) {
@@ -11,15 +12,10 @@ class Solution {
             }
         }
         int curVowels = maxVowels;
-        
+       
         for(int i = k; i < s.length(); i++) {
-            if(vowels.contains(s.charAt(i))) {
-               curVowels++; 
-            }
-            
-            if(vowels.contains(s.charAt(i-k))) {
-                curVowels--;
-            }
+            curVowels += (vowels.contains(s.charAt(i)) ? 1 : 0);
+            curVowels -= (vowels.contains(s.charAt(i-k)) ? 1 : 0);
             maxVowels = Math.max(maxVowels, curVowels);
         }
         return maxVowels; 
